@@ -1,1 +1,1 @@
-5dca1f204d62da18592ed0056b2dc214  humla_repo/addons.xml
+e70619617d448a4b5bed015f7d024c40  humla_repo/addons.xml
