@@ -1,3 +1,6 @@
+[B]Version 0.3.0[/B] 
+- Telugu and Malayalam sections added
+
 [B]Version 0.2.9[/B] 
 - Added Google Analytics
 
